@@ -1,4 +1,5 @@
 * Fix bug with {type} being set to unexpected values in some cases (Christoph Lamprecht)
+* Add tests for scan_chunk (Alexandr Ciornii)
 
 [Changes for 0.91 - 2009-06-22]
 * Add special case for Tk's setPalette call (Christoph Lamprecht)
